update URL from api/pauta to api/v1/pauta, readme update, added the generate swagger file for quick viewing
